small fix in overflow issue on mobile

--- a/style.css
+++ b/style.css
@@ -551,7 +551,7 @@ li {
 
     .side-nav {
         width: 100%;
-        top: 100%;
+        overflow: hidden;
         background-color: rgba(15, 155, 141, 0.753);
         border-radius: 0px 0px 0px 50px;
     }
